2009-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c:
   Try to make broker initialisation a bit more robust.
 * src/gui.c, src/scplugin.c, src/scplugin.h:
   Add an option to make the editor menu items for Spelling
   Suggestions optional.
 * src/gui.c:
   Prevent looking for very long search terms which most probably
   will fail anyway.


2009-09-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c, src/scplugin.h, src/gui.c, src/gui.h, src/speller.c:
   Allow setting a custom dictionary directory without reloading
   the plugin.
   Minor fixes.


2009-09-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c, src/speller.c, src/scplugin.h:
   Add an option to the preference dialog to select a custom
   directory to look for additional dictionary files.


2009-09-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c:
   Remove more unused code.
 * src/speller.c:
   Add preliminary support for configurable dictionary directories.


2009-08-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Remove unused code.


2009-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/scplugin.c, src/speller.c:
   Use single header includes.
   Use the global version macro to set the plugin's version.


2009-06-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Fix compilation with GTK < 2.16.


2009-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, po/geanyspellcheck.pot:
   Prefix the gettext package with "geany" to avoid possible
   naming conflicts.


2009-05-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/scplugin.c, src/gui.h:
   Update the label of the "Default" menu item if the default language
   has been changed.
 * src/speller.c:
   Update Pascal styles as they changed in Scintilla.


2009-05-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
